--- a/index.html
+++ b/index.html
@@ -5883,8 +5883,7 @@ function abrirModalPortfolioBarbeiro() {
                        class="portfolio-url-input" 
                        placeholder="🔗 Cole o link aqui" 
                        value="${url}"
-                       oninput="document.getElementById('previ
-ew-img-${i}').src = this.value || '${placeholder}'">
+                       oninput="document.getElementById('preview-img-${i}').src = this.value || '${placeholder}'">
             </div>
         `;
     }
