--- a/index.html
+++ b/index.html
@@ -1272,7 +1272,7 @@
 
 <div class="popup-section">
           <h4>Conta</h4>
-          <button onclick="abrirModalAlterarSenha()">🔑 Alterar Senha</button> {/* <-- NOVO BOTÃO AQUI */}
+          <button onclick="abrirModalAlterarSenha()">🔑 Alterar Senha</button>
         </div>
 
     <div class="popup-section">
