--- a/index.html
+++ b/index.html
@@ -5229,7 +5229,6 @@ async function abrirModalGerenciarUsuario(uid) {
              <button onclick="adminModificarPontos('${uid}')">Modificar Pontos</button>
         </div>
 
-        
         <div class="popup-section">
             <p><strong>Acesso à Loja:</strong></p>
             <p><strong>Loja Liberada:</strong> ${u.lojaLiberada ? 'Sim ✅' : 'Não ❌'}</p>
@@ -5237,7 +5236,18 @@ async function abrirModalGerenciarUsuario(uid) {
                 ${u.lojaLiberada ? 'Bloquear Acesso à Loja' : 'Liberar Acesso à Loja'}
             </button>
         </div>
-        
+
+<div class="popup-section">
+        <p><strong>Alterar Tipo de Conta:</strong></p>
+        <p>Tipo Atual: <strong>${u.tipo}</strong></p>
+        <div style="display: flex; gap: 10px; margin-top: 5px;">
+            {/* Ajuste os tipos conforme os existentes no seu app */}
+            <button onclick="adminMudarTipoUsuario('${uid}', 'cliente')" ${u.tipo === 'cliente' ? 'disabled' : ''}>Tornar Cliente</button>
+            <button onclick="adminMudarTipoUsuario('${uid}', 'barbeiro')" ${u.tipo === 'barbeiro' ? 'disabled' : ''}>Tornar Barbeiro</button>
+            <button onclick="adminMudarTipoUsuario('${uid}', 'manicure_pedicure')" ${u.tipo === 'manicure_pedicure' ? 'disabled' : ''}>Tornar Manicure/Pedicure</button>
+            <button onclick="adminMudarTipoUsuario('${uid}', 'designer_cilios')" ${u.tipo === 'designer_cilios' ? 'disabled' : ''}>Tornar Designer Cílios</button>
+        </div>
+    </div>
 
         <div class="popup-section">
             <p><strong>Ações de Segurança:</strong></p>
