--- a/index.html
+++ b/index.html
@@ -2604,7 +2604,7 @@ function entrar() {
     })
     .catch(e => {
         fecharTodosOsModais();
-        exibirPopup("Erro ao entrar: email ou senha incorreta);
+        exibirPopup("Erro ao entrar: email ou senha incorreta");
     });
 }
 
