--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -7600,4 +7600,3 @@ loginFields.forEach(field => {
 </script>
 </body>
 </html>
-
